k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: invernadero
  labels:
    name: invernadero
